<resources>
    <string name="app_name">AndroidPv211</string>

    <string name="main_tv_title">Hello, Android!</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_rates">Курсы валют</string>
    <string name="main_btn_anim">Анимации</string>
    <string name="main_btn_chat">CHAT</string>
    <string name="chat_tv_title">Chat4Fun</string>
    <string name="chat_tv_author">Author</string>
    <string name="chat_author_hint">Your nikname</string>
    <string name="chat_author_remember">Save</string>
    <string name="chat_send_hint">SEND</string>
    <string name="chat_message_hint">Enter message</string>
    <string name="chat_content_hint">Latest messages</string>
    <string name="chat_msg_no_author">Enter your nickname</string>
    <string name="chat_msg_no_text">Enter your message</string>
    <string name="chat_msg_no_send">Sending is cancelled</string>
    <string name="chat_msg_no_send_btn">OK</string>


    <string name="anim_tv_title">Анимация</string>
    <string name="anim_tv_alfa">Прозорро</string>
    <string name="anim_tv_rotate">Поворот</string>
    <string name="anim_tv_rotate2">Поворот2</string>
    <string name="anim_tv_scale">Масштаб</string>
    <string name="anim_tv_bell">Bell</string>
    <!--region Calc-->
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_backspase">\u232B</string>
    <string name="calc_btn_sqr">&#x1D465;\u00B2</string>
<!--    <string name="calc_btn_sqrt">\u221A&#x1D465;\u0305</string>-->
    <string name="calc_btn_sqrt">\u221A</string>
    <string name="calc_btn_inv">\u00B9/&#x1D465;</string>
    <string name="calc_btn_div">\u00F7</string>
    <string name="calc_btn_mult">\u00D7</string>
    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_minus">\u2212</string>
    <string name="calc_btn_plusminus">\u00B1</string>
    <string name="calc_btn_coma">,</string>
    <string name="calc_btn_ce">E</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_equal">=</string>
    <string name="calc_btn_percent">%</string>


    <!--endregion-->
    <!--region Calc-->
    <string name="rates_tv_title">Курсы валют от НБУ</string>
    <!--endregion-->


</resources>