<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/calc_layout_bg"
    tools:context=".CalcActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/main_btn_calc"
        android:textColor="@color/calc_tv_result"
        android:textSize="26sp"
        />
    <TextView
        android:id="@+id/calc_tv_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:gravity="end"
        android:textColor="@color/calc_tv_expression"
        android:textSize="36sp"
        android:text="3+9="
        />
    <TextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:textColor="@color/calc_tv_result"
        android:textSize="54sp"
        android:textStyle="bold"
        android:text="27"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

       <Button
           android:id="@+id/calc_btn_func"
         style="@style/calc_btn_func"
           android:text="%"
          />
        <Button
            android:id="@+id/calc_btn_ce"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_ce"
            />
        <Button
            android:id="@+id/calc_btn_c"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_c"
            />
        <Button
            android:id="@+id/calc_btn_backspase"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_backspase"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calc_btn_inv"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_inv"
            />
        <Button

            style="@style/calc_btn_func"
            android:text="@string/calc_btn_sqr"
            />
        <Button
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_sqrt"
            />
        <Button
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_div"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calc_btn_7"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_7"
            />
        <Button
            android:id="@+id/calc_btn_8"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_8"
            />
        <Button
            android:id="@+id/calc_btn_9"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_9"
            />
        <Button
            android:id="@+id/calc_btn_mult"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_mult"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calc_btn_4"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_4"
            />
        <Button
            android:id="@+id/calc_btn_5"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_5"
            />
        <Button
            android:id="@+id/calc_btn_6"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_6"
            />
        <Button
            android:id="@+id/calc_btn_plus"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_plus"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calc_btn_1"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_1"
            />
        <Button
            android:id="@+id/calc_btn_2"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_2"
            />
        <Button
            android:id="@+id/calc_btn_3"
            style="@style/calc_btn_digit"
            android:text="@string/calc_btn_3"
            />
        <Button
            android:id="@+id/calc_btn_minus"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_minus"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calc_btn_plusminus"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_plusminus"
            />
        <Button
            android:id="@+id/calc_btn_0"
            style="@style/calc_btn_digit"
            android:text="0"
            />
        <Button
            android:id="@+id/calc_btn_coma"
            style="@style/calc_btn_func"
            android:text="@string/calc_btn_coma"
            />
        <Button
            android:id="@+id/calc_btn_equal"
            style="@style/calc_btn_res"
            android:text="@string/calc_btn_equal"
            />

    </LinearLayout>
    </LinearLayout>
</LinearLayout>